--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,6 +7,8 @@
     android:background="@color/colorAccent"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    android:elevation="4dp">
+    android:elevation="4dp"
+    app:menu="@menu/backmen">
+
 
 </android.support.v7.widget.Toolbar>
