--- a/app/src/main/res/layout/audio.xml
+++ b/app/src/main/res/layout/audio.xml
@@ -1,11 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/drawerLayoutAudio"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    tools:openDrawer="right"
+    android:weightSum="10">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#42f4cb"
     android:orientation="vertical"
     android:weightSum="10">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/toolAudio"
+        android:background="@color/colorAccent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:elevation="4dp">
+
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/toolbarBkA"
+            android:layout_marginRight="230dp"
+            android:background="@color/colorAccent"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:elevation="4dp"/>
+
+    </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/AudioView"
@@ -21,26 +53,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="4dp"
         android:src="@drawable/music" />
-
-    <Button
-        android:id="@+id/LogOutAudio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/buttonstyleselector"
-        android:text="LogOut"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:id="@+id/BackToHomeAudio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/buttonstyleselector"
-        android:text="Back To Home"
-        android:textColor="#ffffff" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -60,3 +74,12 @@
         android:dividerHeight="2dp" />
 
 </LinearLayout>
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:id="@+id/navViewAud"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/navigation_menu">
+    </android.support.design.widget.NavigationView>
+</android.support.v4.widget.DrawerLayout>
