--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -10,6 +10,13 @@
     android:orientation="vertical"
     tools:openDrawer="right"
     android:weightSum="10">
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -30,11 +37,6 @@
             android:elevation="4dp"/>
 
     </android.support.v7.widget.Toolbar>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -50,21 +52,29 @@
             android:layout_height="match_parent">
 
         </FrameLayout>
+
     </LinearLayout>
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/mainNav"
+</LinearLayout>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="71dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        app:itemBackground="@color/appMainColor"
-        app:itemIconTint="@color/color_navbar"
-        app:itemTextColor="@color/white"
-        app:menu="@menu/nav_items">
+        android:layout_height="match_parent">
 
-    </android.support.design.widget.BottomNavigationView>
-</RelativeLayout>
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/mainNav"
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            app:itemBackground="@color/appMainColor"
+            app:itemIconTint="@color/color_navbar"
+            app:itemTextColor="@color/white"
+            app:menu="@menu/nav_items">
+
+        </android.support.design.widget.BottomNavigationView>
+
+    </RelativeLayout>
+
 
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
