--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,87 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:id="@+id/drawerLayoutMsg"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:fitsSystemWindows="true"-->
+    <!--android:orientation="vertical"-->
+    <!--android:weightSum="10"-->
+    <!--tools:openDrawer="right">-->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayoutMsg"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:openDrawer="right"
-    android:weightSum="10">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#42f4cb"
-        android:orientation="vertical"
-        android:weightSum="10">
-<android.support.v7.widget.Toolbar
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:id="@+id/toolMsg"
-    android:background="#42f4cb"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    android:elevation="4dp">
-
-</android.support.v7.widget.Toolbar>
-
-        <android.support.v7.widget.RecyclerView
-            android:layout_marginTop="70dp"
-            android:id="@+id/recyclerView"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolMsg"
             android:layout_width="match_parent"
-            android:background="#ffffff"
-            android:layout_height="400dp"
-            ></android.support.v7.widget.RecyclerView>
+            android:layout_height="?attr/actionBarSize"
+            android:background="#42f4cb"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        </android.support.v7.widget.Toolbar>
 
 
-</LinearLayout>
-    <!-- A horizontal line between the chatbox and RecyclerView -->
-    <View
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginBottom="0dp"
-        android:background="#e6e6e6"
-        app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/layout_chatbox"
-        android:layout_width="0dp"
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="70dp"
+        android:background="#ffffff">
+
+    </android.support.v7.widget.RecyclerView>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <EditText
+        android:id="@+id/edittext_chatbox"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
-        android:minHeight="48dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        android:layout_gravity="center"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:color/transparent"
+        android:hint="Enter message"
+        android:maxLines="6" />
 
-        <EditText
-            android:id="@+id/edittext_chatbox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:hint="Enter message"
-            android:maxLines="6" />
+    <Button
+        android:id="@+id/button_chatbox_send"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom"
+        android:background="@drawable/ic_send_black_24dp"
+        android:clickable="true"
+        android:gravity="right" />
+</LinearLayout>
+</LinearLayout>
 
-        <Button
-            android:id="@+id/button_chatbox_send"
-            android:layout_width="64dp"
-            android:layout_height="48dp"
-            android:layout_gravity="bottom"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="SEND"
-            android:textSize="14dp" />
+        <!--<LinearLayout-->
+            <!--android:id="@+id/layout_chatbox"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="#ffffff"-->
+            <!--android:minHeight="48dp"-->
+            <!--android:orientation="horizontal"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintRight_toRightOf="parent">-->
 
-    </LinearLayout>
+            <!--&lt;!&ndash; A horizontal line between the chatbox and RecyclerView &ndash;&gt;-->
+            <!--<View-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="2dp"-->
+                <!--android:layout_marginBottom="0dp"-->
+                <!--android:background="#e6e6e6"-->
+                <!--app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"-->
+                <!--app:layout_constraintLeft_toLeftOf="parent"-->
+                <!--app:layout_constraintRight_toRightOf="parent" />-->
 
 
-</android.support.v4.widget.DrawerLayout>
+        <!--</LinearLayout>-->
+
+
+</RelativeLayout>
+
+
+<!--</android.support.v4.widget.DrawerLayout>-->
