--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -35,7 +35,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="350dp"
         android:layout_marginTop="70dp"
         android:background="#ffffff">
 
@@ -43,26 +43,51 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="15dp"
     android:orientation="horizontal">
+
+
     <EditText
         android:id="@+id/edittext_chatbox"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:ems="10"
+        android:hint="Write a message"
+        android:inputType="text"
+        android:paddingHorizontal="10dp"
+        android:text="" />
+
+    <ImageButton
+        android:id="@+id/button_chatbox_send"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="16dp"
-        android:background="@android:color/transparent"
-        android:hint="Enter message"
-        android:maxLines="6" />
+        android:scaleType="fitCenter"
+        android:padding="20dp"
+        android:layout_marginHorizontal="10dp"
+        android:background="@drawable/ic_send_black_24dp"/>
 
-    <Button
-        android:id="@+id/button_chatbox_send"
-        android:layout_width="64dp"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom"
-        android:background="@drawable/ic_send_black_24dp"
-        android:clickable="true"
-        android:gravity="right" />
+    <!--<EditText-->
+        <!--android:id="@+id/edittext_chatbox"-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="60dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_marginLeft="16dp"-->
+        <!--android:layout_marginRight="16dp"-->
+        <!--android:background="@android:color/transparent"-->
+        <!--android:hint="Enter message"-->
+        <!--android:maxLines="6" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/button_chatbox_send"-->
+        <!--android:layout_width="64dp"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_gravity="bottom"-->
+        <!--android:background="@drawable/ic_send_black_24dp"-->
+        <!--android:clickable="true"-->
+        <!--android:gravity="right" />-->
 </LinearLayout>
 </LinearLayout>
 
