--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:layout_marginTop="70dp"
-        android:background="#ffffff">
+        android:background="#80ffffff">
 
     </android.support.v7.widget.RecyclerView>
 <LinearLayout
@@ -45,7 +45,6 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
     android:orientation="horizontal">
-
 
     <EditText
         android:id="@+id/edittext_chatbox"
