--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -10,7 +10,13 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true">
 
-
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/profileImg"
+            android:src="@drawable/ic_person_black_24dp"
+            android:visibility="gone"
+            />
         <TextView
             android:id="@+id/show_msg"
             android:textSize="25dp"
