--- a/app/src/main/res/layout/audio.xml
+++ b/app/src/main/res/layout/audio.xml
@@ -20,7 +20,7 @@
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="50dp"
         android:id="@+id/toolAudio"
         android:background="@color/colorAccent"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
