--- a/app/src/main/res/layout/journal.xml
+++ b/app/src/main/res/layout/journal.xml
@@ -29,7 +29,7 @@
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="30dp"
                 android:id="@+id/toolbarBkJournal"
                 android:layout_marginRight="230dp"
                 android:background="@color/colorAccent"
