--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    android:background="#42f4cb"
+    android:orientation="vertical"
+    android:weightSum="10">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="30dp"
         android:id="@+id/toolProf"
         android:background="@color/colorAccent"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -18,44 +21,88 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Profile"-->
-            <!--android:textColor="@color/colorAccent"-->
-            <!--android:textSize="30dp"-->
-            <!--android:textStyle="bold" />-->
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:id="@+id/profileImgP"
                 android:src="@drawable/ic_launcher_foreground"
                 android:background="@drawable/ic_launcher_background"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp"/>
+                android:layout_marginTop="22dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="170dp"
+                android:id="@+id/emailP"
+                android:paddingTop="150dp"
                 android:textSize="20dp"
                 android:text="Email"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="200dp"
+                android:paddingTop="180dp"
+                android:id="@+id/userP"
                 android:layout_centerHorizontal="true"
                 android:text="UserName"
                 android:textSize="20dp"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="210dp"
+                android:layout_centerHorizontal="true"
+                android:text="Address"
+                android:textSize="20dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="240dp"
+                android:layout_centerHorizontal="true"
+                android:text="Education"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="268dp"
+                android:layout_centerHorizontal="true"
+                android:text="About"
+                android:textSize="15dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="290dp"
+                android:layout_centerHorizontal="true"
+                android:text=""
+                android:textSize="@dimen/text_size_medium"/>
         </RelativeLayout>
+
+        <Button
+            android:id="@+id/BackToLoginBtn"
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:layout_marginTop="420dp"
+            android:background="@drawable/buttonstyleselector"
+            android:gravity="center"
+            android:text="Add Additional Information"
+            android:textColor="#fff" />
+
+        <Button
+            android:id="@+id/changePic"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="462dp"
+            android:background="@drawable/buttonstyleselector"
+            android:gravity="center"
+            android:text="Change Profile Picture"
+            android:textColor="#fff" />
     </android.support.v7.widget.CardView>
 
-</RelativeLayout>
+    </LinearLayout>
