--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,121 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:id="@+id/drawerLayoutMsg"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:fitsSystemWindows="true"-->
-    <!--android:orientation="vertical"-->
-    <!--android:weightSum="10"-->
-    <!--tools:openDrawer="right">-->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolMsg"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolMsg"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#42f4cb"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="#42f4cb"
-            android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:layout_height="350dp"
+            android:layout_marginTop="70dp"
+            android:background="#80ffffff">
 
-        </android.support.v7.widget.Toolbar>
+        </android.support.v7.widget.RecyclerView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
 
+            <EditText
+                android:id="@+id/edittext_chatbox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:ems="10"
+                android:hint="Write a message"
+                android:inputType="text"
+                android:paddingHorizontal="10dp"
+                android:text="" />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/button_chatbox_send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/ic_send_black_24dp"
+                android:padding="20dp"
+                android:scaleType="fitCenter" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_marginTop="70dp"
-        android:background="#80ffffff">
-
-    </android.support.v7.widget.RecyclerView>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="15dp"
-    android:orientation="horizontal">
-
-    <EditText
-        android:id="@+id/edittext_chatbox"
-        android:layout_width="match_parent"
-
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:ems="10"
-        android:hint="Write a message"
-        android:inputType="text"
-        android:paddingHorizontal="10dp"
-        android:text="" />
-
-    <ImageButton
-        android:id="@+id/button_chatbox_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:padding="20dp"
-        android:layout_marginHorizontal="10dp"
-        android:background="@drawable/ic_send_black_24dp"/>
-
-    <!--<EditText-->
-        <!--android:id="@+id/edittext_chatbox"-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="60dp"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_marginLeft="16dp"-->
-        <!--android:layout_marginRight="16dp"-->
-        <!--android:background="@android:color/transparent"-->
-        <!--android:hint="Enter message"-->
-        <!--android:maxLines="6" />-->
-
-    <!--<Button-->
-        <!--android:id="@+id/button_chatbox_send"-->
-        <!--android:layout_width="64dp"-->
-        <!--android:layout_height="48dp"-->
-        <!--android:layout_gravity="bottom"-->
-        <!--android:background="@drawable/ic_send_black_24dp"-->
-        <!--android:clickable="true"-->
-        <!--android:gravity="right" />-->
-</LinearLayout>
-</LinearLayout>
-
-        <!--<LinearLayout-->
-            <!--android:id="@+id/layout_chatbox"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:background="#ffffff"-->
-            <!--android:minHeight="48dp"-->
-            <!--android:orientation="horizontal"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--app:layout_constraintLeft_toLeftOf="parent"-->
-            <!--app:layout_constraintRight_toRightOf="parent">-->
-
-            <!--&lt;!&ndash; A horizontal line between the chatbox and RecyclerView &ndash;&gt;-->
-            <!--<View-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="2dp"-->
-                <!--android:layout_marginBottom="0dp"-->
-                <!--android:background="#e6e6e6"-->
-                <!--app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"-->
-                <!--app:layout_constraintLeft_toLeftOf="parent"-->
-                <!--app:layout_constraintRight_toRightOf="parent" />-->
-
-
-        <!--</LinearLayout>-->
-
-
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
-
-
-<!--</android.support.v4.widget.DrawerLayout>-->
