--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -85,7 +85,7 @@
         </RelativeLayout>
 
         <Button
-            android:id="@+id/BackToLoginBtn"
+            android:id="@+id/addInfo"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginTop="420dp"
