--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,7 @@
         android:layout_gravity="center"
         android:background="@drawable/edittextstyle"
         android:hint="Username"
+             android:maxLines="1"
         android:textColor="#fff"
         android:textColorHint="#fff" />
 
@@ -44,6 +45,7 @@
             android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
+            android:maxLines="1"
             android:background="@drawable/edittextstyle"
             android:hint="Email"
             android:textColor="#fff"
