--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
            android:layout_gravity="center"
            android:background="@drawable/edittextstyle"
            android:hint="Email"
+           android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#fff"
           />
@@ -62,6 +63,7 @@ android:textColor="#fff"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingTop="10dp"
+           android:maxLines="1"
            android:textColorHint="#fff" />
 
        <Button
