--- a/app/src/main/res/layout/add_information.xml
+++ b/app/src/main/res/layout/add_information.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/textinputborder"
-        android:hint="About- minimum 200 characters"
+        android:hint="About- maximum 200 characters"
         android:maxLength="200"
         android:textSize="@dimen/text_size_medium" />
 
