--- a/app/src/main/res/layout/users_view.xml
+++ b/app/src/main/res/layout/users_view.xml
@@ -8,25 +8,28 @@
     android:background="#e6e6e6"
     android:weightSum="100">
 
-    <ImageView
-        android:id="@+id/profileImg"
-        android:layout_width="57dp"
-        android:layout_height="50dp"
-        android:layout_weight="70"
-        android:gravity="center"
-        android:src="@drawable/ic_launcher_foreground"
-        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/userView"
-        android:layout_width="185dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="30"
+        android:layout_weight="90"
         android:text="UserName"
         android:textSize="30dp"
         android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/profileImg"
+        android:layout_width="41dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_weight="10"
+        android:background="@mipmap/ic_launcher_round"
+        android:gravity="center"
+        android:textAlignment="center" />
 
 
 </LinearLayout>
