--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -29,6 +29,16 @@
             android:padding="5dp"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="5dp"/>
+
+        <TextView
+            android:id="@+id/seen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/show_msg"
+            />
+
     </RelativeLayout>
 
 </RelativeLayout>
