--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -5,7 +5,16 @@
     android:layout_height="wrap_content"
     tools:context=".usersFragment">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="Search..."
+        android:id="@+id/search"/>
+
     <android.support.v7.widget.RecyclerView
+       android:layout_marginTop="50dp"
+        android:layout_below="@id/search"
         android:id="@+id/usersList"
         android:layout_width="match_parent"
         android:layout_height="500dp"
