--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp">s
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_marginTop="22dp"
                 android:layout_centerHorizontal="true"
                 android:layout_width="100dp"
