--- a/app/src/main/res/layout/journal.xml
+++ b/app/src/main/res/layout/journal.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:id="@+id/navViewJournal"
+        android:id="@+id/navView"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/navigation_menu">
     </android.support.design.widget.NavigationView>
