--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -31,7 +31,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:id="@+id/profileImgP"
+                android:id="@+id/profileImg"
                 android:background="@mipmap/ic_launcher_round"/>
 
             <TextView
