--- a/app/src/main/res/layout/audio.xml
+++ b/app/src/main/res/layout/audio.xml
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:id="@+id/navViewAud"
+        android:id="@+id/navView"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/navigation_menu">
     </android.support.design.widget.NavigationView>
